# RayTracer

./: CApp.cpp  CApp.h  CApp.hpp  CMakeLists.txt  Image.cpp  Image.hpp  README.md  main.cpp  raytracer
CApp/: CApp.cpp  CApp.hpp  CMakeLists.txt
Camera/: CMakeLists.txt  Camera.cpp  Camera.hpp
Gtfm/: CMakeLists.txt  Gtfm.cpp  Gtfm.hpp
Image/: CMakeLists.txt  Image.cpp  Image.hpp
Light/: CMakeLists.txt  LightBase.cpp  LightBase.hpp  PointLight.cpp  PointLight.hpp
Material/: CMakeLists.txt  MaterialBase.cpp  MaterialBase.hpp  SimpleMaterial.cpp  SimpleMaterial.hpp
Math/: matrix.h  vector.h  vector3.h  vector4.h
Objects/: CMakeLists.txt  ObjSphere.cpp  ObjSphere.hpp  ObjectPlane.cpp  ObjectPlane.hpp  Objectbase.cpp  Objectbase.hpp
Ray/: CMakeLists.txt  Ray.cpp  Ray.hpp
Scene/: CMakeLists.txt  Scene.cpp  Scene.hpp
